[CO-344] Make waiting on sync pending TVar blocking

--- a/wallet-new/cardano-sl-wallet-new.cabal
+++ b/wallet-new/cardano-sl-wallet-new.cabal
@@ -208,6 +208,7 @@ library
                      , reflection
                      , resourcet
                      , retry
+                     , stm
                      , safecopy
                      , safe-exceptions
                      , serokell-util
