[CO-344] Create custom query flag

--- a/wallet-new/cardano-sl-wallet-new.cabal
+++ b/wallet-new/cardano-sl-wallet-new.cabal
@@ -356,6 +356,7 @@ executable wal-integr-test
                      , aeson-diff
                      , aeson-pretty
                      , bytestring
+                     , cardano-sl
                      , cardano-sl-core
                      , cardano-sl-wallet
                      , cardano-sl-wallet-new
