--- a/lib/cardano-sl.cabal
+++ b/lib/cardano-sl.cabal
@@ -174,6 +174,7 @@ library
                       , http-client
                       , http-client-tls
                       , http-conduit
+                      , http-types
                       , lens
                       , log-warper >= 1.1.1
                       , memory
