--- a/wallet/cardano-sl-wallet.cabal
+++ b/wallet/cardano-sl-wallet.cabal
@@ -158,7 +158,6 @@ library
                       , stm
                       , swagger2
                       , text
-                      , formatting
                       , time
                       , time-units
                       , transformers
@@ -236,8 +235,6 @@ test-suite cardano-wallet-test
 
   type:                exitcode-stdio-1.0
   build-depends:       base
-                     , MonadRandom
-                     , QuickCheck
                      , aeson
                      , bytestring
                      , cardano-crypto
@@ -247,15 +244,18 @@ test-suite cardano-wallet-test
                      , cardano-sl-core
                      , cardano-sl-core-test
                      , cardano-sl-crypto
-                     , cardano-sl-crypto-test
                      , cardano-sl-db
                      , cardano-sl-generator
                      , cardano-sl-infra
                      , cardano-sl-util
                      , cardano-sl-util-test
                      , cardano-sl-wallet
+                     , cardano-sl-crypto-test
                      , containers
+                     , safe-exceptions
                      , data-default
+                     , servant
+                     , servant-server
                      , deepseq
                      , ekg-core
                      , ether
@@ -263,13 +263,13 @@ test-suite cardano-wallet-test
                      , hspec
                      , lens
                      , log-warper
+                     , MonadRandom
                      , mtl
-                     , safe-exceptions
+                     , pvss
+                     , QuickCheck
                      , safecopy
-                     , serokell-util >= 0.1.3.4
-                     , servant-server
+                     , serokell-util
                      , stm
-                     , formatting
                      , universum >= 0.1.11
                      , unordered-containers
 
