--- a/wallet-new/cardano-sl-wallet-new.cabal
+++ b/wallet-new/cardano-sl-wallet-new.cabal
@@ -42,6 +42,7 @@ library
                        Cardano.Wallet.API.V1.Handlers.Accounts
                        Cardano.Wallet.API.V1.Handlers.Addresses
                        Cardano.Wallet.API.V1.Handlers.Info
+                       Cardano.Wallet.API.V1.Handlers.Internal
                        Cardano.Wallet.API.V1.Handlers.Settings
                        Cardano.Wallet.API.V1.Handlers.Transactions
                        Cardano.Wallet.API.V1.Handlers.Wallets
@@ -125,6 +126,7 @@ library
                        Cardano.Wallet.Server.CLI
                        Cardano.Wallet.Server.Plugins
                        Cardano.Wallet.TypeLits
+                       Cardano.Wallet.Types.UtxoStatistics
                        Cardano.Wallet.Client
                        Cardano.Wallet.Client.Http
 
@@ -188,6 +190,7 @@ library
                      , http-client-tls
                      , http-types
                      , ixset-typed
+                     , foldl
                      , lens
                      , log-warper
                      , memory
