--- a/stack.yaml
+++ b/stack.yaml
@@ -6,6 +6,8 @@ flags:
 
 extra-package-dbs: []
 
+allow-newer: true
+
 # The dependency graph which was previously here has been dropped in favor of
 # PNG output from the script `scripts/package-dep-graph.sh`, which uses
 # `stack dot` to construct a graph which represents the current state exactly.
@@ -76,7 +78,7 @@ packages:
 # https://github.com/well-typed/cborg/issues/171
 - location:
     git: https://github.com/well-typed/cborg
-    commit: 3d274c14ca3077c3a081ba7ad57c5182da65c8c1
+    commit: 37de2c0ae6bc7fa53f24f8d13748a7c370da9149
   subdirs:
   - cborg
   extra-dep: true
@@ -137,14 +139,14 @@ packages:
 # Required for explorer.
 # We forked it because it has some unacceptable version bounds. We didn't
 # add any features nor fix any bugs.
-- location:
-    git: https://github.com/input-output-hk/engine.io.git
-    commit: d3c55f51bb81cee7d0d551de930ce65fe7d76756
-  extra-dep: true
-  subdirs:
-    - socket-io
-    - engine-io
-    - engine-io-wai
+# - location:
+#     git: https://github.com/input-output-hk/engine.io.git
+#     commit: d3c55f51bb81cee7d0d551de930ce65fe7d76756
+#   extra-dep: true
+#   subdirs:
+#     - socket-io
+#     - engine-io
+#     - engine-io-wai
 
 # Library has never been released on Hackage yet
 - location:
@@ -171,7 +173,7 @@ packages:
 # buggy async
 - location:
     git: https://github.com/input-output-hk/log-warper.git
-    commit: 4af8114fbcd5698a4e1fbc653031f0300e29faee
+    commit: 0b7d4d48310f139d75829d31883aaa87ce53312c
   extra-dep: true
 
 # Exposes a custom discovery function so you can specify the prefix.
@@ -185,10 +187,10 @@ packages:
 
 # servant-quickcheck has a doc/doc.cabal file that is poorly specified and this
 # breaks the mafia build tool.
-- location:
-    git: https://github.com/avieth/servant-quickcheck.git
-    commit: e4e879abca99d0d56015765859fb37af59a81dbb
-  extra-dep: true
+# - location:
+#     git: https://github.com/avieth/servant-quickcheck.git
+#     commit: e4e879abca99d0d56015765859fb37af59a81dbb
+#   extra-dep: true
 
 # Add custom stylish-haskell while waiting for PR upstream: https://github.com/jaspervdj/stylish-haskell/pull/214
 - location:
@@ -224,7 +226,7 @@ extra-deps:
 - base58-bytestring-0.1.0
 - pipes-interleave-1.1.2
 - tabl-1.0.3
-- loc-0.1.3.2
+- loc-0.1.3.3
 - json-sop-0.2.0.3
 - lens-sop-0.2.0.2
 - lzma-clib-5.2.2
@@ -246,6 +248,15 @@ extra-deps:
 - aeson-options-0.0.0
 
 - servant-swagger-ui-redoc-0.3.0.1.21.2
+
+# Needed to LTS-12.7 compatibility
+- ether-0.5.1.0
+- servant-quickcheck-0.0.7.2
+- o-clock-0.1.1
+- socket-io-1.3.10
+- engine-io-1.2.21
+- engine-io-wai-1.0.8
+- beam-sqlite-0.3.2.2
 
 # This is for CI to pass --fast to all dependencies
 apply-ghc-options: everything
